--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@ title: Арт-студия "Расписной малюр"
             <div class="col-md-12">
                 <div class="select__title">
                     <img class="img" src="assets/images/palette.svg" alt="">
-                    <h1 class="title">Какая группа вам подходит?</h1>
+                    <h1 class="title">Какая группа вас интересует?</h1>
                 </div>
             </div>
             <div class="col-md-3">
