--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@ title: Арт-студия "Расписной малюр"
             <div class="col-md-12">
                 <div class="select__title">
                     <img class="img" src="assets/images/palette.svg" alt="">
-                    <h1 class="title">Какая группа вас интересует?</h1>
+                    <h1 class="title">Выберите группу</h1>
                 </div>
             </div>
             <div class="col-md-3">
@@ -69,11 +69,9 @@ title: Арт-студия "Расписной малюр"
 </div>
 
 <!-- PREVIEW -->
-<div class="container">
-    <div class="preview">
-        <img class="img" src="assets/images/preview.svg" width="1822" alt="">
-        <!--    <img class="preview__item" src="assets/images/img.png">-->
-    </div>
+<div class="preview">
+    <img class="work" src="assets/images/preview.svg" width="1822">
+    <div class="preview__item"></div>
 </div>
 
 
@@ -93,8 +91,23 @@ title: Арт-студия "Расписной малюр"
     </div>
 </div>
 
-<!-- ACTION -->
+<!-- LOCATION -->
+<div class="container">
+    <div class="location">
+        <div class="row">
+            <div class="col-md-5">
+                <h1 class="location__title">Как до нас добраться?</h1>
+                <p class="location__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis.</p>
+                <span class="d-inline-block"><a class="location__link" href="#">Открыть карту</a></span>
+            </div>
+            <div class="col-md-7">
+                <img style="display: block; margin: 0 auto;" src="assets/images/location.svg" alt="">
+            </div>
+        </div>
+    </div>
+</div>
 
+<!-- ACTION -->
 <div class="action">
     <img class="action__img" src="assets/images/action.jpg" alt="">
     <div class="container">
@@ -111,19 +124,5 @@ title: Арт-студия "Расписной малюр"
     </div>
 </div>
 
-<!-- LOCATION -->
-<!--<div class="container">-->
-<!--    <div class="location">-->
-<!--        <div class="row">-->
-<!--            <div class="col-md-5">-->
-<!--                <h1 class="location__title">Как до нас добраться?</h1>-->
-<!--                <p class="location__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis.</p>-->
-<!--                <span class="d-inline-block"><a class="location__link" href="#">Открыть карту</a></span>-->
-<!--            </div>-->
-<!--            <div class="col-md-7">-->
-<!--                <img style="display: block; margin: 0 auto;" src="assets/images/location.svg" alt="">-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+
 
