--- a/src/4.html
+++ b/src/4.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+---
+layout: default
+title: Группа 4+
+---
+
+<!-- INTRO -->
+<div class="container">
+    <div class="row intro">
+        <div class="col-md-5 ">
+            <span class="intro__badge">В игровой форме</span>
+            <h1 class="intro__title">Изобразительное + музыкальное развитие</h1>
+            <p class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis.</p>
+            <button class="intro__btn">Записаться</button>
+        </div>
+        <div class="col-md-7">
+            <img class="intro__img" src="assets/images/intro.svg" alt="">
+        </div>
+    </div>
+</div>
+
