--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@ title: Арт-студия "Расписной малюр"
             <button class="intro__btn">Записаться</button>
         </div>
         <div class="col-md-7">
-            <img style="margin: 0 auto; display: block" src="assets/images/intro.svg" alt="">
+            <img class="intro__img" src="assets/images/intro.svg" alt="">
         </div>
     </div>
 </div>
@@ -25,7 +25,7 @@ title: Арт-студия "Расписной малюр"
             <div class="col-md-12">
                 <div class="select__title">
                     <img class="img" src="assets/images/palette.svg" alt="">
-                    <h1 class="title">Выберите группу</h1>
+                    <h1>Выберите группу</h1>
                 </div>
             </div>
             <div class="col-md-3">
@@ -79,10 +79,10 @@ title: Арт-студия "Расписной малюр"
 <div class="container">
     <div class="teacher">
         <div class="row">
-            <div class="col-md-5">
-                <img src="assets/images/teacher.svg" alt="">
+            <div class="col-md-6">
+                <img class="teacher__img" src="assets/images/teacher.svg" alt="">
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <h1 class="teacher__title">Ваши преподаватели</h1>
                 <p class="teacher__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis.</p>
                 <span class="d-inline-block"><a class="teacher__link" href="#">Узнать больше</a></span>
@@ -92,20 +92,20 @@ title: Арт-студия "Расписной малюр"
 </div>
 
 <!-- LOCATION -->
-<div class="container">
-    <div class="location">
-        <div class="row">
-            <div class="col-md-5">
-                <h1 class="location__title">Как до нас добраться?</h1>
-                <p class="location__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis.</p>
-                <span class="d-inline-block"><a class="location__link" href="#">Открыть карту</a></span>
-            </div>
-            <div class="col-md-7">
-                <img style="display: block; margin: 0 auto;" src="assets/images/location.svg" alt="">
-            </div>
-        </div>
-    </div>
-</div>
+<!--<div class="container">-->
+<!--    <div class="location">-->
+<!--        <div class="row">-->
+<!--            <div class="col-md-5">-->
+<!--                <h1 class="location__title">Как до нас добраться?</h1>-->
+<!--                <p class="location__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis.</p>-->
+<!--                <span class="d-inline-block"><a class="location__link" href="#">Открыть карту</a></span>-->
+<!--            </div>-->
+<!--            <div class="col-md-7">-->
+<!--                <img class="location__img" src="assets/images/location.svg" alt="">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <!-- ACTION -->
 <div class="action">
@@ -114,7 +114,7 @@ title: Арт-студия "Расписной малюр"
         <div class="row">
             <div class="action__item">
                 <h1 class="action__title">Запишитесь на бесплатное занятие</h1>
-                <p class="action__subtitle">На бесплатном занятии вы познакомитесь с преподавателем, <br>оцените уровень материала и понаблюдаете за рабочим процессом.</p>
+                <p class="action__subtitle">На бесплатном занятии вы познакомитесь с преподавателем, <br>оцените уровень материала, позанимаетесь и понаблюдаете за рабочим процессом.</p>
                 <div class="d-block">
                     <a class="action__btn" href="#">Записаться</a>
                     <div class="d-block"><a class="action__gallery" href="#">Посмотреть галерею</a></div>
