--- a/src/4.html
+++ b/src/4.html
@@ -8,7 +8,7 @@ title: Группа 4+
     <div class="row intro">
         <div class="col-md-5 ">
             <span class="intro__badge">В игровой форме</span>
-            <h1 class="intro__title">Изобразительное + музыкальное развитие</h1>
+            <h1 class="intro__title">Музыка + ИЗО</h1>
             <p class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis.</p>
             <button class="intro__btn">Записаться</button>
         </div>
@@ -18,3 +18,44 @@ title: Группа 4+
     </div>
 </div>
 
+<!-- BENEFITS -->
+<div class="container">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-3">
+            <div class="benefits__item">
+                <img class="benefits__img" src="assets/images/creativity.svg" style="display:block; width: 65px" alt="">
+                <h1 class="benefits__title">Креативно</h1>
+                <p class="benefits__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit <br>ut aliquam.</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="benefits__item">
+                <img class="benefits__img" src="assets/images/art-teacher.svg" style="display:block; width: 65px" alt="">
+                <h1 class="benefits__title">Проффесионально</h1>
+                <p class="benefits__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit <br>ut aliquam.</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="benefits__item">
+                <img class="benefits__img" src="assets/images/giving.svg" style="display:block; width: 65px" alt="">
+                <h1 class="benefits__title">Заботимся</h1>
+                <p class="benefits__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit <br>ut aliquam.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- PROGRAM -->
+<div class="program">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="program__item">
+                    <h1 class="program__title">Программа обучения</h1>
+                    <img src="assets/images/line.svg" alt="" style="width: 400px; margin: 1rem 0;">
+                    <p class="program__subtitle mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Esse numquam porro quo?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
