--- a/src/4.html
+++ b/src/4.html
@@ -59,3 +59,77 @@ title: Группа 4+
         </div>
     </div>
 </div>
+
+<!-- GEAR -->
+<div class="gear">
+    <div class="container">
+        <div class="row d-flex">
+            <div class="col-md-12">
+                <div class="gear__item">
+                    <h1 class="gear__title">Вам понадобится</h1>
+<!--                    <p class="gear__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, <br>purus sit amet luctus venenatis, lectus magna fringilla.</p>-->
+                </div>
+            </div>
+            <div class="row mt-5 d-flex justify-content-center">
+                <div class="col-md-3">
+                    <a class="" href="#">
+                        <div class="gear__img">
+                            <img src="assets/images/iso.jpg" alt="">
+<!--                            <img src="http://placehold.jp/360x180.png" alt="">-->
+                        </div>
+                        <div class="gear__btn">Для живописи</div>
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a class="" href="#">
+                        <div class="gear__img">
+                            <img src="assets/images/iso.jpg" alt="">
+                            <!--                            <img src="http://placehold.jp/360x180.png" alt="">-->
+                        </div>
+                        <div class="gear__btn">Для лепки</div>
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a class="" href="#">
+                        <div class="gear__img">
+                            <img src="assets/images/iso.jpg" alt="">
+                            <!--                            <img src="http://placehold.jp/360x180.png" alt="">-->
+                        </div>
+                        <div class="gear__btn">Для графики</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="navbar_scroll" style="position: sticky;" data-original-top="0px">
+    <div class="container text-center">
+        <div class="">
+            <nav class="">
+                <div class="">
+                    <a href="#" class="">
+                        Преподаватели
+                    </a>
+                    <a href="#" class="">
+                        Программа
+                    </a>
+                    <a href="#" class="">
+                        Сертификат
+                    </a>
+                    <a href="#" class="">
+                        Расписание
+                    </a>
+                    <a href="#" class="">
+                        Вам понадобится
+                    </a>
+                </div>
+
+                <a class="" href="#">
+                    Записаться
+                </a>
+            </nav>
+        </div>
+    </div>
+</div>
+
